Ability to pick colors from image started

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,10 @@ dependencies:
   cupertino_icons: ^0.1.2
   camera: 
   image_picker: 
+  path_provider: ^1.6.1
+  provider: ^4.0.4
+  path: ^1.6.4
+  palette_generator: ^0.2.0
   font_awesome_flutter: ^8.5.0
 
 dev_dependencies:
