--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  firebase_auth: ^0.15.4
+  cloud_firestore: ^0.13.3
+  dbcrypt: ^1.0.0
   camera: 
   image_picker: 
   font_awesome_flutter: ^8.5.0
