--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   firebase_auth: ^0.15.4
-  cloud_firestore: ^0.13.3
+  firebase_database: ^3.1.3
   dbcrypt: ^1.0.0
   camera: 
   image_picker: 
